# wednesday

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.ps1  config.yaml.example  justfile
.sqlx/: query-2bd9a6700238bebd31b04e7c2ab35d25820f6b4871190d8c7f0f076da39bf289.json  query-3d0105eaaa1de07bf2294c70f8ef8d0bed566a35d14feab540668f39bc347021.json  query-3f66b2e79b30162305bc1557a0bc37eef3c5215f6ac2958cfd4370430d893e8a.json  query-81c9ea4257239c25f099e4424ae731530fb6ff2ecab04c2e54d78d0cd3577b81.json  query-da005abf078432ad00c98033e49f5592567ff6db00b45588310bc06a4cae5901.json  query-e66874f75a97c30ec74f10f596f34aacc2760ab88efb0b659b4613e5d007ff91.json  query-ebdcb2f4d7d9c4b9eaaa3025b13bc28340b48b0aec2ae1cfb9424f68afd5f445.json  query-ec1270aff5673249052f34e9aa76d937c0a5ae6deeef4c35638134ff873e7989.json
src/: bot.rs  cache.rs  config.rs  errors.rs  main.rs  rates.rs  toads.rs
src/bot/: mod.rs  wednesday.rs
src/database/: db.rs  mod.rs  sql_functions.rs  table_active_chats.rs  table_mapping.rs  table_statistics.rs
src/database/sql/: 20240801171602_init.down.sql  20240801171602_init.up.sql  functions.sql
src/scheduler/: mod.rs  rate_check_providers.rs  retry.rs
