[package]
name = "wednesday"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.70"
thiserror = "=1.0.40"
config = "=0.13.3"
chrono = "=0.4.24"
clokwerk = "=0.4.0"
teloxide-core = { version = "=0.9.1", default-features = false }
teloxide = { version = "=0.12.2", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "cache-me"] }
log = "=0.4.17"
tokio = { version =  "=1.27.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "=0.1.12"
rand = "=0.8.5"
serde = { version = "=1.0.159", features = ["derive"] }
serde_json = "=1.0.95"
serde_cbor = "=0.11.2"
reqwest = { version = "=0.11.16", default-features = false, features = ["rustls-tls", "json", "serde_json"] }
futures = "=0.3.27"
sea-query = { version = "=0.28.3", features = ["with-chrono"] }
bb8 = "=0.8.0"
bb8-postgres = "=0.8.1"
bb8-redis = "=0.12.0"
rust-embed = "=6.6.1"
sentry = { version = "=0.30.0", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
tracing = "=0.1.37"
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.3.16", features = ["fmt", "tracing-log", "registry", "std"] }
tracing-log = "=0.1.3"
async-trait = "=0.1.68"
alea = "=0.2.2"

[profile.release]
debug = true