[package]
name = "wednesday"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "=1.0.83", features = ["backtrace"] }
thiserror = "=1.0.60"
config = "=0.14.0"
chrono = "=0.4.38"
clokwerk = "=0.4.0"
teloxide-core = { version = "=0.10.1", default-features = false }
teloxide = { version = "=0.13.0", default-features = false, features = ["ctrlc_handler", "rustls", "macros", "cache-me"] }
tokio = { version =  "=1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "=0.1.15"
rand = "=0.8.5"
serde = { version = "=1.0.202", features = ["derive"] }
serde_json = "=1.0.117"
serde_cbor = "=0.11.2"
reqwest = { version = "=0.12.4", default-features = false, features = ["rustls-tls", "json"] }
futures = "=0.3.30"
bb8 = "=0.8.3"
bb8-redis = "=0.15.0"
sentry = { version = "0.34", default-features = false, features = ["anyhow", "reqwest", "rustls", "backtrace", "contexts", "panic", "log", "tracing"] }
tracing = "=0.1.40"
tracing-futures = "=0.2.5"
tracing-subscriber = { version = "=0.3.18", features = ["fmt", "tracing-log", "registry", "std"] }
tracing-log = "=0.2.0"
async-trait = "=0.1.80"
alea = "=0.2.2"
regex = "=1.10.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "migrate", "postgres", "macros" ] }
build-time = "0.1.3"
serde-this-or-that = { version = "0.4.2", features = ["derive"] }

# [profile.release]
# opt-level = 3
# strip = false
# debug = true
# codegen-units = 1
# lto = true
